--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -4,6 +4,7 @@
         <title>A html page</title>
     </head>
     <body>
+        <h1>Welcome to my page !</h1>
         Hello, world !
     </body>
 
