Add exclamation point

--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -4,9 +4,8 @@
         <title>A html page</title>
     </head>
     <body>
-        <h1>Welcome to my page !</h1>
+        <h1>Welcome to my page !!</h1>
         <h2>Hello!</h2>
         Hello, world !
     </body>
-
 </html>
